# pjecz-plataforma-web-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt
common/: authentication.py  exceptions.py  formats.py
config/: settings.py
lib/: exceptions.py  pandas_tables.py  requests.py
pjecz_plataforma_web_cli/: app.py
pjecz_plataforma_web_cli/autoridades/: app.py  request_api.py
pjecz_plataforma_web_cli/centros_trabajos/: request_api.py
pjecz_plataforma_web_cli/distritos/: app.py  request_api.py
pjecz_plataforma_web_cli/domicilios/: app.py  request_api.py
pjecz_plataforma_web_cli/edictos/: app.py  request_api.py
pjecz_plataforma_web_cli/funcionarios/: app.py  request_api.py
pjecz_plataforma_web_cli/inv_categorias/: app.py  request_api.py
pjecz_plataforma_web_cli/inv_custodias/: app.py  request_api.py
pjecz_plataforma_web_cli/inv_equipos/: app.py  request_api.py
pjecz_plataforma_web_cli/inv_marcas/: app.py
pjecz_plataforma_web_cli/inv_redes/: app.py
pjecz_plataforma_web_cli/listas_de_acuerdos/: app.py  request_api.py  send_messages.py
pjecz_plataforma_web_cli/materias/: app.py  request_api.py
pjecz_plataforma_web_cli/materias_tipos_juicios/: app.py  request_api.py
pjecz_plataforma_web_cli/modulos/: request_api.py
pjecz_plataforma_web_cli/oficinas/: app.py  request_api.py
pjecz_plataforma_web_cli/permisos/: app.py  request_api.py
pjecz_plataforma_web_cli/roles/: app.py  request_api.py
pjecz_plataforma_web_cli/sentencias/: request_api.py
pjecz_plataforma_web_cli/usuarios/: app.py  request_api.py
plataforma_web/: app.py
plataforma_web/audiencias/: app.py
plataforma_web/autoridades/: app.py
plataforma_web/bitacoras/: app.py  request_api.py
plataforma_web/boletines/: app.py  request_api.py
plataforma_web/centros_trabajos/: app.py
plataforma_web/cit_dias_inhabiles/: app.py  request_api.py
plataforma_web/distritos/: app.py
plataforma_web/domicilios/: app.py  request_api.py
plataforma_web/edictos/: app.py
plataforma_web/entradas_salidas/: app.py  request_api.py
plataforma_web/funcionarios/: app.py
plataforma_web/glosas/: app.py
plataforma_web/inv_categorias/: app.py
plataforma_web/inv_componentes/: app.py  request_api.py
plataforma_web/inv_custodias/: app.py
plataforma_web/inv_equipos/: app.py  request_api.py
tests/: pjecz_plataforma_web_cli.py  test_audiencias.py  test_autoridades.py  test_distritos.py  test_edictos.py  test_listas_de_acuerdos.py  test_sentencias.py
(+22 files in other folders)
