[tool.poetry]
name = "pjecz-plataforma-web-cli"
version = "1.4.0"
description = "Interfaz de linea de comandos para Plataforma Web."
authors = ["Guillermo Valdes <guillermo@movimientolibre.com>"]
license = "AGPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
rich = "^13.5.2"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
unidecode = "^1.3.6"
tabulate = "^0.9.0"
dominate = "^2.8.0"
sendgrid = "^6.10.0"
pandas = "^2.0.3"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"
black = "^23.7.0"
isort = "^5.12.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 256

[tool.isort]
line_length = 256
profile = "black"
