[tool.poetry]
package-mode = false
name = "pjecz-plataforma-web-cli"
version = "1.5.0"
description = "Interfaz de linea de comandos para Plataforma Web."
authors = ["Guillermo Valdes <guillermo@movimientolibre.com>"]
license = "AGPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dominate = "^2.9.1"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
rich = "^13.7.1"
sendgrid = "^6.11.0"
tabulate = "^0.9.0"
typer = "^0.12.3"
unidecode = "^1.3.8"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
pre-commit = "^3.8.0"
pytest = "^8.3.2"
pylint = "^3.2.6"
pylint-sqlalchemy = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 128

[tool.isort]
line_length = 128
profile = "black"
